correcion de nav

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <li><a href="#inicio">Inicio</a></li>
       <li><a href="#ejercicios">Practica</a></li>
       <li><a href="#librerias">Librerias CDN</a></li>
-      <li><a href="#practicalibre">Practica Libre</a></li>
+      <li><a href="#practicalibre">Practica css con js</a></li>
     </ul>
   </nav>
 
